[workspace]
resolver = "2"
members = ["remissive", "remissive-macros"]
default-members = ["remissive", "remissive-macros"]

[profile.release]
opt-level = 2
lto = true

[profile.dev.package."*"]
opt-level = 2

[workspace.package]
authors = ["Todd L Smith <todd.smith@xebia.com>"]
version = "1.0.0"
edition = "2021"
publish = false
