[package]
name = "remissive-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
once_cell = "1.18.0"
proc-macro2 = "1.0.70"
remissive = { path = "../remissive" }
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"

[dev-dependencies]
serde = {  version = "1.0.193", features = ["derive"] }
