[package]
name = "remissive"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[dependencies.heapless]
version = "0.7.*"

[dependencies.serde]
version = "1.0.193"
features = ["derive"]
default-features = false

[dependencies.postcard]
version = "1.0.8"
default-features = true

[dependencies.portable-atomic]
version = "1.5.1"
default-features = true
features = ["require-cas"]

[features]
debug = []
default = ["debug", "display", "serde/std", "postcard/use-std"]
display = []
no-std = []
